style(project): separation by folders
Also use generated schemas
