# src/aibolit/schemas/openapi_generated/schemas.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.json
-#   timestamp: 2025-04-29T19:21:22+00:00
+#   timestamp: 2025-05-10T13:35:08+00:00
 
 from __future__ import annotations
 
@@ -16,10 +16,12 @@ class MedicationSchedule(BaseModel):
     duration_days: Optional[PositiveInt] = Field(
         None, description='Duration in days, must be > 0, if set', examples=[7], title='Duration Days'
     )
-    start_date: Optional[date] = Field(None, title='Start Date')
+    start_date: Optional[date] = Field(
+        None, description='today date by default', examples=['2025-12-31'], title='Start Date'
+    )
     user_id: PositiveInt = Field(..., title='User Id')
     id: PositiveInt = Field(..., title='Id')
-    end_date: Optional[date] = Field(None, examples=['2025-05-06'], title='End Date')
+    end_date: Optional[date] = Field(None, examples=['2026-01-06'], title='End Date')
     daily_plan: List[str] = Field(
         ...,
         description='Each reception time is a multiple of 15!',
@@ -28,13 +30,15 @@ class MedicationSchedule(BaseModel):
     )
 
 
-class MedicationScheduleCreate(BaseModel):
+class MedicationScheduleCreateRequest(BaseModel):
     medication_name: str = Field(..., title='Medication Name')
     frequency: conint(lt=16, gt=0) = Field(..., examples=[7], title='Frequency')
     duration_days: Optional[PositiveInt] = Field(
         None, description='Duration in days, must be > 0, if set', examples=[7], title='Duration Days'
     )
-    start_date: Optional[date] = Field(None, title='Start Date')
+    start_date: Optional[date] = Field(
+        None, description='today date by default', examples=['2025-12-31'], title='Start Date'
+    )
     user_id: PositiveInt = Field(..., title='User Id')
 
 
@@ -58,14 +62,26 @@ class NextTakingsMedicationsResponse(BaseModel):
     next_takings: List[NextTakingsMedications] = Field(..., title='Next Takings')
 
 
-class UserCreate(BaseModel):
+class User(BaseModel):
+    id: PositiveInt = Field(..., title='Id')
+
+
+class UserCreateRequest(BaseModel):
     pass
+
+
+class UserCreateResponse(BaseModel):
+    id: PositiveInt = Field(..., title='Id')
 
 
 class ValidationError(BaseModel):
     loc: List[Union[str, int]] = Field(..., title='Location')
     msg: str = Field(..., title='Message')
     type: str = Field(..., title='Error Type')
+
+
+class AllUsers(BaseModel):
+    users: List[User] = Field(..., title='Users')
 
 
 class HTTPValidationError(BaseModel):
